@@ -1,18 +1,24 @@
 package org.alloytools.alloy.core.infra;
 
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Enumeration;
 import java.util.Formatter;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
-import java.util.TreeMap;
+import java.util.Properties;
+import java.util.function.BiConsumer;
 import java.util.jar.Manifest;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -20,9 +26,11 @@ import java.util.stream.Collectors;
 
 import org.alloytools.alloy.context.api.AlloyContext;
 import org.alloytools.alloy.infrastructure.api.AlloyMain;
+import org.alloytools.util.table.Table;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import aQute.lib.env.Env;
 import aQute.lib.getopt.Arguments;
 import aQute.lib.getopt.CommandLine;
 import aQute.lib.getopt.Description;
@@ -32,52 +40,39 @@ import aQute.lib.justif.Justif;
 import aQute.lib.strings.Strings;
 import aQute.libg.parameters.Attributes;
 import aQute.libg.parameters.ParameterMap;
-import aQute.libg.reporter.ReporterAdapter;
+import aQute.service.reporter.Reporter;
 import edu.mit.csail.sdg.alloy4.A4Preferences;
 import edu.mit.csail.sdg.alloy4.A4Preferences.Pref;
-import edu.mit.csail.sdg.translator.A4Options;
-import edu.mit.csail.sdg.translator.A4Options.SatSolver;
+import edu.mit.csail.sdg.translator.A4Solution;
+import kodkod.engine.satlab.ExternalSolver;
+import kodkod.engine.satlab.SATFactory;
+import kodkod.engine.satlab.SATSolver;
+import kodkod.solvers.api.NativeCode;
+import kodkod.solvers.api.NativeCode.Platform;
 
 /**
  * Since the Alloy code is used for many different situations, we do not assume
  * we know how the world looks like. This class uses the AlloyMain annotation to
  * find any class that can be called from the command line that was added to the
  * distribution jar.
+ * <p>
+ * DO NOT CREATE A LOGGER
  *
  */
-public class AlloyDispatcher extends ReporterAdapter {
+@Description("The Alloy dispatcher" )
+public class AlloyDispatcher extends Env {
 
-    final static Logger log = LoggerFactory.getLogger(AlloyDispatcher.class);
-    PrintStream         out = System.out;
-    PrintStream         err = System.err;
-    AlloyContext        context;
-    Optional<Manifest>  manifest;
+    public static int    exitCode = 0;
 
+    static final Justif  justif   = new Justif(60, 0, 10, 20, 30);
 
+    PrintStream          out      = System.out;
+    PrintStream          err      = System.err;
+    AlloyContext         context;
+    Optional<Manifest>   manifest;
+    Logger               log;
+    private List<Object> mains;
 
-    static class MainDef implements AutoCloseable {
-
-        public final String  name;
-        public final Object  instance;
-        public final boolean deflt;
-
-        public MainDef(Object instance, String name, boolean deflt) {
-            this.instance = instance;
-            this.name = name;
-            this.deflt = deflt;
-        }
-
-        @Override
-        public String toString() {
-            return "MainDef [name=" + name + ", instance=" + instance + "]";
-        }
-
-        @Override
-        public void close() throws Exception {
-            if (instance instanceof AutoCloseable)
-                IO.close((AutoCloseable) instance);
-        }
-    }
 
     enum Levels {
                  off,
@@ -106,71 +101,82 @@ public class AlloyDispatcher extends ReporterAdapter {
         @Description("Set per logger log level. The syntax is <logger-prefix>=<level>, where level is off, trace, debug, info, warn, error" )
         String[] log();
 
-        @Description("A comma separated string with Alloy preferences. Preference id's (and their values) can be found with the `prefs` sub command. Usually enclosed in quotes to prevent the shell from breaking them up. Preferences are stored persistently." )
-        String preferences();
     }
 
     public static void main(String[] args) {
         AlloyDispatcher dispatcher = new AlloyDispatcher();
         CommandLine cl = new CommandLine(dispatcher);
         try {
-            String help = cl.execute(dispatcher, "alloy", Arrays.asList(args));
+            String help = cl.execute(dispatcher, "_alloy", Arrays.asList(args));
             if (help != null) {
                 System.err.println(help);
             }
         } catch (Exception e) {
-            dispatcher.exception(e, "invocation failed %s", e.getMessage());
+            e.printStackTrace();
         }
-        dispatcher.report(System.out);
+        if (exitCode != 0)
+            System.exit(exitCode);
     }
 
-    public void _alloy(BaseOptions options) throws Exception {
-        if (options.debug())
-            System.setProperty("debug", "yes");
+    public void __alloy(BaseOptions options) throws Exception {
 
-        setslf4j(options.defaultLevel(Levels.error), options.log());
+        setslf4j(options.debug() ? Levels.debug : options.defaultLevel(Levels.error), options.log());
+        log = LoggerFactory.getLogger("alloy");
+        if (log.isDebugEnabled())
+            log.debug("starting alloy {}", getVersion());
 
         CommandLine cl = options._command();
         AlloyContext context = getContext(options);
-        Map<String,MainDef> mains = getMains(context, cl);
 
-        doPreferences(options.preferences());
+        loadExtensions(new File(context.getHome(), "extensions/sat"));
 
+        mains = getMains(context, cl);
         try {
-
-
             List<String> arguments = options._arguments();
 
-            MainDef selected;
-            if (arguments.isEmpty()) {
-                selected = mains.entrySet().stream().filter(e -> e.getValue().deflt).map(e -> e.getValue()).findAny().orElse(null);
-                if (selected == null) {
-                    error("invalid JAR, could not find a main that is the default and no command was given. Main classes found %s", mains);
+            String subcommand = "gui";
+
+            if (!arguments.isEmpty()) {
+                subcommand = arguments.remove(0);
+                if (subcommand.equals("help"))
+                    subcommand = "_help";
+            }
+
+            CommandLine l = new CommandLine(this);
+            for (Object target : mains) {
+                Map<String,Method> commands = l.getCommands(target);
+                if (commands.containsKey(subcommand)) {
+                    try {
+                        log.debug("subcommand {} found in {}", subcommand, target);
+                        if (target instanceof Env env) {
+                            env.setExceptions(options.debug());
+                        }
+                        String info = l.execute(target, subcommand, arguments);
+                        if (info != null) {
+                            System.out.println(info);
+                        }
+                    } catch (Exception e) {
+                        log.error("excuting sub command {}:{} error {}", target, subcommand, e, e);
+                        exception(e, "executing %s:%s", target, subcommand);
+                    }
+                    if (target instanceof Reporter && target != this) {
+                        getInfo((Reporter) target);
+                    }
+                    if (!getErrors().isEmpty())
+                        exitCode = 1;
+                    report(System.err);
                     return;
                 }
-            } else {
-                String _name = arguments.remove(0);
-                String name = _name.equals("help") ? "_help" : _name; // 'help' is built in but we override it
-                selected = mains.entrySet().stream().filter(e -> e.getValue().name.equals(name)).map(e -> e.getValue()).findAny().orElse(null);
-                if (selected == null) {
-                    error("No such command: %s, available commands are %s", name, mains.keySet());
-                    return;
-                }
             }
-
-            if (!isOk()) {
-                return;
-            }
-
-            log.debug("selected main {} is with arguments {}", selected, arguments);
-
-            String execute = cl.execute(selected.instance, selected.name, arguments);
-            if (execute != null) {
-                err.println(execute);
-            }
-
+            error("no such command %s, use help to get a full list", subcommand);
+            __help(null);
+            report(System.err);
+            exitCode = 2;
         } finally {
-            mains.values().forEach(IO::close);
+            mains.forEach(o -> {
+                if (o instanceof AutoCloseable)
+                    IO.close((AutoCloseable) o);
+            });
         }
     }
 
@@ -184,6 +190,7 @@ public class AlloyDispatcher extends ReporterAdapter {
         boolean full();
     }
 
+    @Description("Display the current version" )
     public void _version(VersionOptions options) {
         String version = getVersion();
         if (!options.full()) {
@@ -196,11 +203,17 @@ public class AlloyDispatcher extends ReporterAdapter {
 
     private AlloyContext getContext(BaseOptions options) {
         if (context == null) {
+            File home = IO.getFile("~/.alloy");
             context = new AlloyContext() {
 
                 @Override
                 public boolean isDebug() {
                     return options.debug();
+                }
+
+                @Override
+                public File getHome() {
+                    return home;
                 }
             };
         }
@@ -218,6 +231,7 @@ public class AlloyDispatcher extends ReporterAdapter {
     }
 
 
+    @Description("Show the preferences or modify them" )
     public void _prefs(PreferencesOptions options) {
         if (options.cli()) {
             StringBuilder sb = new StringBuilder();
@@ -242,16 +256,149 @@ public class AlloyDispatcher extends ReporterAdapter {
     @Arguments(
                arg = {} )
     interface SolverOptions extends Options {
+
+        @Description("Show the solvers that are not available on this platform" )
+        boolean unlinked();
+
+        @Description("Show a list of names" )
+        boolean list();
     }
 
 
+    @Description("Show the list of solvers" )
     public void _solvers(SolverOptions options) {
-        StringBuilder sb = new StringBuilder();
-        for (SatSolver o : A4Options.SatSolver.values()) {
-            out.printf("%s%n", o);
+        if (!options.list()) {
+            out.printf("OS Platform       %s%n", NativeCode.platform);
+            out.printf("Java platform     %s/%s/%n", System.getProperty("os.name"), System.getProperty("os.arch"), System.getProperty("os.version"));
         }
+
+        List<SATFactory> list = SATFactory.getSolvers();
+        if (!options.unlinked())
+            list = list.stream().filter(SATFactory::isPresent).collect(Collectors.toList());
+
+        BiConsumer<Integer,SATFactory> set;
+        if (options.list()) {
+            set = (row, ss) -> {
+                if (row >= 0)
+                    System.out.println(ss);
+            };
+        } else {
+            Table table = new Table(list.size() + 1, 5, 1);
+            table.set(0, 0, "id", "description", "type", "attributes", "diagnostic");
+            set = (row, ss) -> {
+                if (row < 0)
+                    System.out.println(table);
+                else {
+                    table.set(row, 0, ss.id());
+                    table.set(row, 1, wrap(ss.getDescription().orElse("")));
+                    List<String> attrs = new ArrayList<>();
+                    table.set(row, 2, ss.type());
+                    table.set(row, 3, ss.attributes());
+
+                    String check = ss.check();
+                    if (check != null)
+                        table.set(row, 4, wrap(check));
+                }
+            };
+        }
+
+        int r = 1;
+        for (SATFactory o : list) {
+            boolean available = o.isPresent();
+            if (options.unlinked() || available) {
+                set.accept(r, o);
+                r++;
+            }
+        }
+        set.accept(-1, null);
     }
 
+    private String wrap(String description) {
+        if (description == null)
+            return "";
+        StringBuilder sb = new StringBuilder(description);
+        justif.wrap(sb);
+        return sb.toString();
+    }
+
+
+    @Arguments(
+               arg = {} )
+    @Description("Show all the native solvers for all supported platforms" )
+    interface NativeOptions extends Options {
+
+    }
+
+    @Description("Show all the native solvers for all supported platforms" )
+    public void _natives(NativeOptions options) {
+        List<SATFactory> allSolvers = SATFactory.getAllSolvers();
+        int FIXED = 4;
+        Table table = new Table(allSolvers.size() + 1, NativeCode.platforms.length + FIXED, 1);
+        int r, c;
+
+        c = table.set(0, 0, "id", "description", "type", "attributes");
+
+        for (Platform p : NativeCode.platforms) {
+            table.set(0, c, p.toString() + (NativeCode.platform == p ? "**" : ""));
+            c++;
+        }
+
+        r = 1;
+        for (SATFactory solver : allSolvers) {
+            c = table.set(r, 0, solver.id(), wrap(solver.getDescription().orElse(null)), solver.type(), solver.attributes());
+
+            String libraries[] = solver.getLibraries();
+            String executables[] = solver.getExecutables();
+
+            for (Platform platform : NativeCode.platforms) {
+                NativeCode.clearCache();
+                StringBuilder sb = new StringBuilder();
+                String del = "";
+                boolean foundOne = false;
+                for (String library : libraries) {
+                    Optional<File> libFile = platform.getLibrary(library);
+                    if (libFile.isPresent()) {
+                        sb.append(del).append(libFile.get().getName());
+                        del = "\n";
+                        foundOne = true;
+                    }
+                }
+                if (foundOne) {
+                    for (String library : libraries) {
+                        Optional<File> libFile = platform.getLibrary(library);
+                        if (!libFile.isPresent()) {
+                            sb.append(del).append(library).append(" [missing]");
+                        }
+                    }
+                }
+                foundOne = false;
+                for (String executable : executables) {
+                    Optional<File> exeFile = platform.getExecutable(executable);
+                    if (exeFile.isPresent()) {
+                        sb.append(del).append(exeFile.get().getName());
+                        del = "\n";
+                        foundOne = true;
+                    }
+                }
+                if (foundOne) {
+                    for (String executable : executables) {
+                        Optional<File> exeFile = platform.getExecutable(executable);
+                        if (!exeFile.isPresent()) {
+                            sb.append(del).append(executable).append(" [missing]");
+                        }
+                    }
+                }
+
+                if (sb.toString().length() > 0) {
+                    justif.wrap(sb);
+                    table.set(r, c, sb);
+                }
+                c++;
+            }
+            r++;
+        }
+        out.println(table);
+    }
 
 
     @Description("Show help information about the available sub commands" )
@@ -263,44 +410,56 @@ public class AlloyDispatcher extends ReporterAdapter {
 
     }
 
+    @Description("Show all the native solvers for all supported platforms" )
     public void __help(HelpOptions options) {
-        List<String> arguments = options._arguments();
-        CommandLine cl = options._command();
-        Map<String,MainDef> mains = getMains(context, cl);
+        CommandLine cl = new CommandLine(this);
+
         Justif j = new Justif(80);
         try (Formatter f = j.formatter()) {
 
-            if (arguments.isEmpty()) {
-                cl.help(f, this, "alloy");
-                f.format("Sub commands are: %s%n", mains.keySet().stream().collect(Collectors.joining(", ")).replace("_help", "help"));
-                f.format("Do 'help <sub-cmd> to get more information about a particular sub command%n", mains.keySet().stream().collect(Collectors.joining(", ")));
-            } else {
-                for (Map.Entry<String,MainDef> e : mains.entrySet()) {
-                    String name = e.getKey();
-                    if (!arguments.contains(name))
+            cl.help(f, this);
+
+            if (options == null || options._arguments().isEmpty()) {
+                for (Object target : mains) {
+                    if (target == this)
                         continue;
 
-                    MainDef main = e.getValue();
-                    if (main.deflt)
-                        f.format("[default]");
-                    cl.help(f, main.instance, name);
+                    for (Entry<String,Method> e : cl.getCommands(target).entrySet()) {
+                        if (e.getValue().getName().startsWith("__"))
+                            continue;
+
+                        Description d = e.getValue().getAnnotation(Description.class);
+                        String desc = " ";
+                        if (d != null)
+                            desc = d.value();
+
+                        f.format("  %s\t0-\t1%s %n", e.getKey(), desc);
+                    }
+                    f.format("%n");
+                }
+            } else {
+                List<String> _arguments = options._arguments();
+                String subcommand = _arguments.remove(0);
+                for (Object target : mains) {
+                    Map<String,Method> commands = cl.getCommands(target);
+                    if (commands.containsKey(subcommand)) {
+                        cl.help(f, target, subcommand);
+                    }
                 }
             }
-            out.println(j.wrap());
+        } catch (Exception e) {
+            e.printStackTrace();
         }
+        out.println(j.wrap());
     }
 
 
-    private Map<String,MainDef> getMains(AlloyContext context, CommandLine cl) {
-        Map<String,MainDef> result = new TreeMap<>();
-        localCommands(cl, result);
-        globalCommands(context, result);
-        return result;
-    }
+    private List<Object> getMains(AlloyContext context, CommandLine cl) {
+        List<Object> result = new ArrayList<>();
+        result.add(this);
 
-    private void globalCommands(AlloyContext context, Map<String,MainDef> result) {
-        ParameterMap header = getHeader("Provide-Capability");
-
+        ParameterMap header = getHeaderMap("Provide-Capability");
+        log.debug("Provide-Capability {}", header);
         header.entrySet().stream().filter(e -> e.getKey().startsWith(AlloyMain.NAMESPACE)).forEach(e -> {
             try {
                 Attributes attrs = e.getValue();
@@ -309,31 +468,18 @@ public class AlloyDispatcher extends ReporterAdapter {
                     throw new RuntimeException("Expected a fqn in the capability " + e);
 
                 Class< ? > mainClass = AlloyDispatcher.class.getClassLoader().loadClass(fqn);
-                AlloyMain mainAnn = mainClass.getAnnotation(AlloyMain.class);
-                if (mainAnn != null) {
-                    Object instance = getInstance(context, e, mainClass);
-                    MainDef main = new MainDef(instance, mainAnn.name(), mainAnn.isDefault());
-                    result.put(main.name, main);
-                    log.debug("found main class {}", main);
-                } else {
-                    throw new RuntimeException("Main class " + mainClass + " is listed in capability " + e + " but does not have an AlloyMain annotation");
-                }
+                AlloyMain alloyMain = mainClass.getAnnotation(AlloyMain.class);
+                if (alloyMain == null)
+                    throw new RuntimeException("Expected an AlloyMain annotation on " + fqn);
+
+                Object instance = getInstance(context, e, mainClass);
+                log.debug("found command provider {} -> {}", fqn, instance);
+                result.add(instance);
             } catch (ClassNotFoundException e1) {
                 throw new RuntimeException("In capability " + e + ", the fqn cannot be located as class in the current JAR: " + e1);
             }
         });
-    }
-
-    private void localCommands(CommandLine cl, Map<String,MainDef> result) {
-        Map<String,Method> commands = cl.getCommands(this);
-        for (Map.Entry<String,Method> e : commands.entrySet()) {
-            String cmd = e.getKey();
-            if (cmd.equals("alloy"))
-                continue;
-
-            MainDef md = new MainDef(this, cmd, false);
-            result.put(cmd, md);
-        }
+        return result;
     }
 
     private Object getInstance(AlloyContext context, Entry<String,Attributes> e, Class< ? > mainClass) {
@@ -341,39 +487,14 @@ public class AlloyDispatcher extends ReporterAdapter {
             return mainClass.getConstructor(AlloyContext.class).newInstance(context);
         } catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e1) {
             try {
-                return mainClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e2) {
+                return mainClass.getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e2) {
                 throw new RuntimeException("Capability " + e + " specifies class " + mainClass + " but that class has no default constructor nor one that takes AlloyContext");
             }
         }
     }
 
-    final static Pattern PREF_P = Pattern.compile("\\s*(?<id>[^=]+)\\s*(=\\s*(?<value>.*)\\s*)");
-
-    private void doPreferences(String preferences) {
-        if (preferences == null)
-            return;
-
-        for (String pref : Strings.splitQuoted(preferences)) {
-            Matcher m = PREF_P.matcher(pref);
-            if (!m.matches()) {
-                error("cannot match preferences '%s', particularly `%s`", preferences, pref);
-            } else {
-                String id = m.group("id");
-                String value = m.group("value");
-                if (value == null)
-                    value = "true";
-
-                String result = A4Preferences.set(id, value);
-                if (result != null) {
-                    error("Setting pref %s failed: %s", id, result);
-                }
-            }
-        }
-
-    }
-
-    private ParameterMap getHeader(String name) {
+    private ParameterMap getHeaderMap(String name) {
         return getManifest().map(m -> new ParameterMap(m.getMainAttributes().getValue(name))).orElse(new ParameterMap());
     }
 
@@ -386,12 +507,18 @@ public class AlloyDispatcher extends ReporterAdapter {
             return manifest;
 
         try {
-            URL resource = AlloyDispatcher.class.getResource("/META-INF/MANIFEST.MF");
-            if (resource == null)
-                return Optional.empty();
+            Enumeration<URL> e = AlloyDispatcher.class.getClassLoader().getResources("META-INF/MANIFEST.MF");
 
-            Manifest manifest = new Manifest(resource.openStream());
-            return this.manifest = Optional.of(manifest);
+            while (e.hasMoreElements()) {
+                URL nextElement = e.nextElement();
+                Manifest manifest = new Manifest(nextElement.openStream());
+                java.util.jar.Attributes mainAttributes = manifest.getMainAttributes();
+                String bsn = mainAttributes.getValue("Bundle-SymbolicName");
+                if ("org.alloytools.alloy.dist".equals(bsn)) {
+                    return this.manifest = Optional.of(manifest);
+                }
+            }
+            return Optional.empty();
         } catch (IOException e) {
             log.error("No Manifest found {}", e, e);
             return Optional.empty();
@@ -415,4 +542,105 @@ public class AlloyDispatcher extends ReporterAdapter {
                 }
             }
     }
+
+    /**
+     * Load the extensions from the home directory
+     *
+     * @param hom
+     */
+
+    void loadExtensions(File extensions) {
+        A4Solution.addTransformers(SATFactory.extensions);
+        if (!extensions.isDirectory())
+            return;
+
+        for (File f : extensions.listFiles()) {
+            Properties p = new Properties();
+            String name = f.getName().replaceAll("\\..*", "");
+            try (FileInputStream in = new FileInputStream(f)) {
+                p.load(in);
+                ExternalFactory externalFactory = new ExternalFactory(name, p);
+                String check = externalFactory.check();
+                if (check == null) {
+                    SATFactory.extensions.add(externalFactory);
+                } else {
+                    error("cannot load extension at %s: %s", f, check);
+                }
+            } catch (FileNotFoundException e) {
+                // can't happen
+                e.printStackTrace();
+            } catch (Exception e) {
+                log.error("failed to load extension {}, {}", f.getAbsolutePath(), e, e);
+            }
+        }
+    }
+
+    public static class ExternalFactory extends SATFactory {
+
+        static final long serialVersionUID = 1L;
+        final String      id;
+        final String      executable;
+        final String      description;
+        final String      cnf;
+        final boolean     maxsat;
+        final boolean     prover;
+        final String[]    options;
+
+        public ExternalFactory(String id, Properties p) {
+            this.id = id;
+
+            String executable = p.getProperty("executable");
+            if (executable.indexOf(File.separatorChar) >= 0) {
+                this.executable = IO.getFile(executable).getAbsolutePath();
+            } else {
+                this.executable = executable;
+            }
+            cnf = p.getProperty("cnf", null);
+            description = p.getProperty("description");
+            maxsat = p.getProperty("maxsat") != null;
+            prover = p.getProperty("prover") != null;
+            String options = p.getProperty("options");
+            if (options != null) {
+                this.options = Strings.splitQuoted(options, " \t\n").toArray(EMPTY);
+            } else {
+                this.options = EMPTY;
+            }
+        }
+
+        @Override
+        public String id() {
+            return id;
+        }
+
+        @Override
+        public SATSolver createSolver() {
+            return new ExternalSolver(this.executable, this.cnf, true, this.options);
+        }
+
+        @Override
+        public boolean prover() {
+            return prover;
+        }
+
+        @Override
+        public boolean maxsat() {
+            return maxsat;
+        }
+
+        @Override
+        public Optional<String> getDescription() {
+            return Optional.ofNullable(description);
+        }
+
+        @Override
+        public String toString() {
+            return id() + "[extension=" + executable + "]";
+        }
+
+        @Override
+        public String type() {
+            return "extension";
+        }
+    }
+
 }
